adjust to openapi changes and continue with server impl
- rename hard_disks to storage_devices
- remove total_gpus and total_fpgas
