# nadiki_registrar/models/server_create.py
@@ -9,13 +9,13 @@ from nadiki_registrar.models.base_model_ import Model
 from nadiki_registrar.models.cpu import CPU
 from nadiki_registrar.models.fpga import FPGA
 from nadiki_registrar.models.gpu import GPU
-from nadiki_registrar.models.hard_disk import HardDisk
+from nadiki_registrar.models.storage_device import StorageDevice
 from nadiki_registrar import util
 
 from nadiki_registrar.models.cpu import CPU  # noqa: E501
 from nadiki_registrar.models.fpga import FPGA  # noqa: E501
 from nadiki_registrar.models.gpu import GPU  # noqa: E501
-from nadiki_registrar.models.hard_disk import HardDisk  # noqa: E501
+from nadiki_registrar.models.storage_device import StorageDevice  # noqa: E501
 
 class ServerCreate(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -23,7 +23,7 @@ class ServerCreate(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, facility_id=None, rack_id=None, rated_power=None, total_cpu_sockets=2, installed_cpus=None, number_of_psus=2, total_installed_memory=None, number_of_memory_units=None, hard_disks=None, total_gpus=0, installed_gpus=None, total_fpgas=0, installed_fpgas=None, product_passport=None, cooling_type='air'):  # noqa: E501
+    def __init__(self, facility_id=None, rack_id=None, rated_power=None, total_cpu_sockets=2, installed_cpus=None, number_of_psus=2, total_installed_memory=None, number_of_memory_units=None, storage_devices=None, installed_gpus=None, installed_fpgas=None, product_passport=None, cooling_type='air'):  # noqa: E501
         """ServerCreate - a model defined in OpenAPI
 
         :param facility_id: The facility_id of this ServerCreate.  # noqa: E501
@@ -42,14 +42,10 @@ class ServerCreate(Model):
         :type total_installed_memory: int
         :param number_of_memory_units: The number_of_memory_units of this ServerCreate.  # noqa: E501
         :type number_of_memory_units: int
-        :param hard_disks: The hard_disks of this ServerCreate.  # noqa: E501
-        :type hard_disks: List[HardDisk]
-        :param total_gpus: The total_gpus of this ServerCreate.  # noqa: E501
-        :type total_gpus: int
+        :param storage_devices: The storage_devices of this ServerCreate.  # noqa: E501
+        :type storage_devices: List[StorageDevice]
         :param installed_gpus: The installed_gpus of this ServerCreate.  # noqa: E501
         :type installed_gpus: List[GPU]
-        :param total_fpgas: The total_fpgas of this ServerCreate.  # noqa: E501
-        :type total_fpgas: int
         :param installed_fpgas: The installed_fpgas of this ServerCreate.  # noqa: E501
         :type installed_fpgas: List[FPGA]
         :param product_passport: The product_passport of this ServerCreate.  # noqa: E501
@@ -66,10 +62,8 @@ class ServerCreate(Model):
             'number_of_psus': int,
             'total_installed_memory': int,
             'number_of_memory_units': int,
-            'hard_disks': List[HardDisk],
-            'total_gpus': int,
+            'storage_devices': List[StorageDevice],
             'installed_gpus': List[GPU],
-            'total_fpgas': int,
             'installed_fpgas': List[FPGA],
             'product_passport': object,
             'cooling_type': str
@@ -84,10 +78,8 @@ class ServerCreate(Model):
             'number_of_psus': 'number_of_psus',
             'total_installed_memory': 'total_installed_memory',
             'number_of_memory_units': 'number_of_memory_units',
-            'hard_disks': 'hard_disks',
-            'total_gpus': 'total_gpus',
+            'storage_devices': 'storage_devices',
             'installed_gpus': 'installed_gpus',
-            'total_fpgas': 'total_fpgas',
             'installed_fpgas': 'installed_fpgas',
             'product_passport': 'product_passport',
             'cooling_type': 'cooling_type'
@@ -101,10 +93,8 @@ class ServerCreate(Model):
         self._number_of_psus = number_of_psus
         self._total_installed_memory = total_installed_memory
         self._number_of_memory_units = number_of_memory_units
-        self._hard_disks = hard_disks
-        self._total_gpus = total_gpus
+        self._storage_devices = storage_devices
         self._installed_gpus = installed_gpus
-        self._total_fpgas = total_fpgas
         self._installed_fpgas = installed_fpgas
         self._product_passport = product_passport
         self._cooling_type = cooling_type
@@ -313,52 +303,27 @@ class ServerCreate(Model):
         self._number_of_memory_units = number_of_memory_units
 
     @property
-    def hard_disks(self):
-        """Gets the hard_disks of this ServerCreate.
+    def storage_devices(self):
+        """Gets the storage_devices of this ServerCreate.
 
-        Array of installed hard disks  # noqa: E501
+        Array of installed storage devices  # noqa: E501
 
-        :return: The hard_disks of this ServerCreate.
-        :rtype: List[HardDisk]
+        :return: The storage_devices of this ServerCreate.
+        :rtype: List[StorageDevice]
         """
-        return self._hard_disks
+        return self._storage_devices
 
-    @hard_disks.setter
-    def hard_disks(self, hard_disks):
-        """Sets the hard_disks of this ServerCreate.
+    @storage_devices.setter
+    def storage_devices(self, storage_devices):
+        """Sets the storage_devices of this ServerCreate.
 
-        Array of installed hard disks  # noqa: E501
+        Array of installed storage devices  # noqa: E501
 
-        :param hard_disks: The hard_disks of this ServerCreate.
-        :type hard_disks: List[HardDisk]
+        :param storage_devices: The storage_devices of this ServerCreate.
+        :type storage_devices: List[StorageDevice]
         """
 
-        self._hard_disks = hard_disks
-
-    @property
-    def total_gpus(self):
-        """Gets the total_gpus of this ServerCreate.
-
-        Total number of GPUs installed  # noqa: E501
-
-        :return: The total_gpus of this ServerCreate.
-        :rtype: int
-        """
-        return self._total_gpus
-
-    @total_gpus.setter
-    def total_gpus(self, total_gpus):
-        """Sets the total_gpus of this ServerCreate.
-
-        Total number of GPUs installed  # noqa: E501
-
-        :param total_gpus: The total_gpus of this ServerCreate.
-        :type total_gpus: int
-        """
-        if total_gpus is not None and total_gpus < 0:  # noqa: E501
-            raise ValueError("Invalid value for `total_gpus`, must be a value greater than or equal to `0`")  # noqa: E501
-
-        self._total_gpus = total_gpus
+        self._storage_devices = storage_devices
 
     @property
     def installed_gpus(self):
@@ -382,31 +347,6 @@ class ServerCreate(Model):
         """
 
         self._installed_gpus = installed_gpus
-
-    @property
-    def total_fpgas(self):
-        """Gets the total_fpgas of this ServerCreate.
-
-        Total number of FPGAs installed  # noqa: E501
-
-        :return: The total_fpgas of this ServerCreate.
-        :rtype: int
-        """
-        return self._total_fpgas
-
-    @total_fpgas.setter
-    def total_fpgas(self, total_fpgas):
-        """Sets the total_fpgas of this ServerCreate.
-
-        Total number of FPGAs installed  # noqa: E501
-
-        :param total_fpgas: The total_fpgas of this ServerCreate.
-        :type total_fpgas: int
-        """
-        if total_fpgas is not None and total_fpgas < 0:  # noqa: E501
-            raise ValueError("Invalid value for `total_fpgas`, must be a value greater than or equal to `0`")  # noqa: E501
-
-        self._total_fpgas = total_fpgas
 
     @property
     def installed_fpgas(self):
