# nadiki_registrar/models/storage_device.py
@@ -9,20 +9,20 @@ from nadiki_registrar.models.base_model_ import Model
 from nadiki_registrar import util
 
 
-class HardDisk(Model):
+class StorageDevice(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, vendor=None, capacity=None, type=None):  # noqa: E501
-        """HardDisk - a model defined in OpenAPI
+        """StorageDevice - a model defined in OpenAPI
 
-        :param vendor: The vendor of this HardDisk.  # noqa: E501
+        :param vendor: The vendor of this StorageDevice.  # noqa: E501
         :type vendor: str
-        :param capacity: The capacity of this HardDisk.  # noqa: E501
+        :param capacity: The capacity of this StorageDevice.  # noqa: E501
         :type capacity: float
-        :param type: The type of this HardDisk.  # noqa: E501
+        :param type: The type of this StorageDevice.  # noqa: E501
         :type type: str
         """
         self.openapi_types = {
@@ -42,34 +42,34 @@ class HardDisk(Model):
         self._type = type
 
     @classmethod
-    def from_dict(cls, dikt) -> 'HardDisk':
+    def from_dict(cls, dikt) -> 'StorageDevice':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The HardDisk of this HardDisk.  # noqa: E501
-        :rtype: HardDisk
+        :return: The StorageDevice of this StorageDevice.  # noqa: E501
+        :rtype: StorageDevice
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def vendor(self):
-        """Gets the vendor of this HardDisk.
+        """Gets the vendor of this StorageDevice.
 
         Disk vendor (e.g., Samsung, Intel)  # noqa: E501
 
-        :return: The vendor of this HardDisk.
+        :return: The vendor of this StorageDevice.
         :rtype: str
         """
         return self._vendor
 
     @vendor.setter
     def vendor(self, vendor):
-        """Sets the vendor of this HardDisk.
+        """Sets the vendor of this StorageDevice.
 
         Disk vendor (e.g., Samsung, Intel)  # noqa: E501
 
-        :param vendor: The vendor of this HardDisk.
+        :param vendor: The vendor of this StorageDevice.
         :type vendor: str
         """
         if vendor is None:
@@ -79,22 +79,22 @@ class HardDisk(Model):
 
     @property
     def capacity(self):
-        """Gets the capacity of this HardDisk.
+        """Gets the capacity of this StorageDevice.
 
         Disk capacity in TB  # noqa: E501
 
-        :return: The capacity of this HardDisk.
+        :return: The capacity of this StorageDevice.
         :rtype: float
         """
         return self._capacity
 
     @capacity.setter
     def capacity(self, capacity):
-        """Sets the capacity of this HardDisk.
+        """Sets the capacity of this StorageDevice.
 
         Disk capacity in TB  # noqa: E501
 
-        :param capacity: The capacity of this HardDisk.
+        :param capacity: The capacity of this StorageDevice.
         :type capacity: float
         """
         if capacity is None:
@@ -104,22 +104,22 @@ class HardDisk(Model):
 
     @property
     def type(self):
-        """Gets the type of this HardDisk.
+        """Gets the type of this StorageDevice.
 
         Type of storage device  # noqa: E501
 
-        :return: The type of this HardDisk.
+        :return: The type of this StorageDevice.
         :rtype: str
         """
         return self._type
 
     @type.setter
     def type(self, type):
-        """Sets the type of this HardDisk.
+        """Sets the type of this StorageDevice.
 
         Type of storage device  # noqa: E501
 
-        :param type: The type of this HardDisk.
+        :param type: The type of this StorageDevice.
         :type type: str
         """
         allowed_values = ["NVMe", "SSD", "HDD", "Other"]  # noqa: E501
